--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>QB React App Starter</title>
+    <title>DEV: QB React App Starter</title>
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="mobile-web-app-capable" content="yes">
   	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/bundle.js"></script>
+    <script src="static/bundle.js"></script>
   </body>
 </html>
