--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<link rel="apple-touch-icon" href="/assets/images/icon-256.png">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="static/bundle.js"></script>
   </body>
 </html>
