--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="QB React App Starter">
   	<link rel="apple-touch-icon" href="/assets/images/icon-256.png">
+    <script src="assets/js/MorphSVGPlugin.js"></script>
   </head>
   <body>
     <div id="root"></div>
