Linear graph working.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="QB React App Starter">
   	<link rel="apple-touch-icon" href="/assets/images/icon-256.png">
-    <script src="assets/js/MorphSVGPlugin.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+    <script src="src/gsap/plugins/DrawSVGPlugin.js"></script>
+    <script src="src/gsap/plugins/AttrPlugin.js"></script>
   </head>
   <body>
     <div id="root"></div>
